# GlobalBase

./: CMakeLists.txt  GlobalBase.sln  LICENSE
GlobalBase/: CMakeLists.txt  GB_BaseTypes.h  GB_Config.cpp  GB_Config.h  GB_Crypto.cpp  GB_Crypto.h  GB_DataCache.cpp  GB_DataCache.h  GB_FileSystem.cpp  GB_FileSystem.h  GB_IO.cpp  GB_IO.h  GB_Logger.cpp  GB_Logger.h  GB_Math.h  GB_Process.cpp  GB_Process.h  GB_ReadWriteLock.cpp  GB_ReadWriteLock.h  GB_SmbAccessor.cpp  GB_SmbAccessor.h  GB_SysInfo.cpp  GB_SysInfo.h  GB_ThreadPool.cpp  GB_ThreadPool.h  GB_Timer.cpp  GB_Timer.h  GB_Utf8String.cpp  GB_Utf8String.h  GB_Utility.cpp  GB_Utility.h  GlobalBase.h  GlobalBase.vcxproj  GlobalBase.vcxproj.filters  GlobalBasePort.h
GlobalBase/Geometry/: GB_GeometryInterface.cpp  GB_GeometryInterface.h  GB_Matrix3x3.cpp  GB_Matrix3x3.h  GB_Point2d.cpp  GB_Point2d.h  GB_Rectangle.cpp  GB_Rectangle.h  GB_Vector2d.cpp  GB_Vector2d.h
Test/: CMakeLists.txt  Test.vcxproj  main.cpp
